# dromedary

./: .envrc  .gitignore  .ocamlformat  LICENSE  Makefile  README.md  TODO.md  cloc.txt  default.nix  dromedary.opam  dromedary.opam.template  dune-project  dune-workspace  flake.nix
.circleci/: config.yml
benchmark/: benchmark.ml  benchmark_infer.ml  dune  results.txt
lib/constraints/: constraint.ml  constraint.mli  constraints.ml  constraints.mli  dune  generalization.ml  generalization.mli  generalization_intf.ml  import.ml  module_types.ml  module_types.mli  module_types_intf.ml  solver.ml  solver.mli  structure.ml  structure.mli
lib/unifier/: dromedary_lib_unifier.ml  dune  import.ml  structure.ml  unifier.ml  unifier.mli  unifier_intf.ml  union_find.ml  union_find.mli
lib/util/: dune  pretty_printer.ml  pretty_printer.mli  util.ml
nix/: overlay.nix
scripts/: cloc.sh
src/: dromedary.ml  dune
src/constraints/: constraints.ml  constraints.mli  dune  import.ml
src/misc/: dune  monad.ml  monad.mli  size.ml  size.mli  sized_list.ml  sized_list.mli
src/parsing/: ast_types.ml  dune  lexer.mll  parser.mly  parsetree.ml  parsetree.mli  parsing.ml  parsing.mli
src/typing/: README.md  algebra.ml  algebra.mli  coercion.ml  computation.ml  computation.mli  computation_intf.ml  convert.ml  convert.mli  dune  env.ml  env.mli  fragment.ml  fragment.mli  import.ml  infer.ml  infer_core.ml  infer_core.mli  infer_structure.ml  infer_structure.mli  predefined.ml  predefined.mli  substitution.ml  substitution.mli  typedtree.ml  typedtree.mli  types.ml  types.mli  typing.ml  typing.mli
src/util/: doubly_linked.ml  doubly_linked.mli  dune  util.ml
test/: dune
test/parsing/: bad_expression.ml  bad_structure.ml  dune  good_expression.ml  (+8 more)
(+135 files in other folders)
