(library
 (public_name dromedary.parsing)
 (name parsing)
 (preprocess (pps ppx_jane bisect_ppx --conditional))
 (libraries core menhirLib dromedary.lib.util))

(ocamllex lexer)

(menhir
 (modules parser)
 (flags --explain --dump))

(env
 (dev
  (flags
   (:standard -w +A-39-48-42-44-4-70 -warn-error +A-3))))